--- a/001-Pokemon-Gallery/styles.css
+++ b/001-Pokemon-Gallery/styles.css
@@ -6,9 +6,10 @@ body {
 }
 
 header {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
     padding: 1em;
-    background-color: #333;
+    background-color:grey;
     color: white;
 }
 
